gccida/g2/build1
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build1/src/tree.c:2943:15: error: must use 'enum' tag to refer to type 'tree_code'
tree  build1( tree_code code, tree type, tree node) 
              ^
              enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build1/src/tree.c:2950:12: error: expected expression
*( _OWORD *)&result->common.chain = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build1/src/tree.c:2950:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->common.chain = 0LL; 
   ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/build1/src/obj/tree.o] Error 1
